--- a/style.css
+++ b/style.css
@@ -165,11 +165,22 @@ main a:hover {
     color: var(--cor4);
 }
 
-iframe {
- margin: 40px;
- padding: 40px;
- 
-}
+ div.video {
+
+    background-color: var(--cor2);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 58%;
+    position: relative;
+ }
+
+ div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 4%;
+    width: 90%;
+    height: 90%;
+ }
 
 aside {
     background-color: var(--cor1);
